# crypto-monitor

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
deploy/systemd/: crypto-monitor@.service
docs/: AWS_CLOUDWATCH_ALARMS.md  AWS_EC2_DEPLOYMENT.md  EXCHANGE_CONNECTOR_ONBOARDING_TEMPLATE.md  IMPLEMENTATION_MILESTONE_CHECKLIST.md  IMPLEMENTATION_MILESTONE_CHECKLIST_MULTI_MARKET.md  MIGRATION_JSONL_TO_CLICKHOUSE.md  PAIR_ONBOARDING_TEMPLATE.md  RUNBOOK.md
env/profiles/: binance-coinm-btcusd-perp.env  binance-coinm-ethusd-perp.env  binance-spot-btcusd.env  binance-spot-ethusd.env  binance-usdm-btcusdt.env  binance-usdm-ethusdt.env
scripts/: get_soak_status.ps1  get_soak_status.sh  install_ec2_systemd.sh  run_soak_gate.ps1  run_soak_gate.sh  start_4pairs.sh  status_4pairs.sh  stop_4pairs.sh  stop_soak_run.ps1  stop_soak_run.sh  verify_archive_integrity_4pairs.sh  verify_s3_upload_4pairs.sh
src/: binance.rs  clock.rs  config.rs  health.rs  main.rs  orderbook.rs  pipeline.rs  signal.rs  telemetry.rs  types.rs
src/connectors/: binance.rs  mod.rs
src/orderbook/: core.rs  engine.rs  mod.rs  tests.rs
src/storage/: metrics_writer.rs  mod.rs  orderbook_archive.rs  raw_spool.rs  s3_uploader.rs
