[package]
name = "crypto-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arrow-array = "53"
arrow-schema = "53"
aws-config = "1.8"
aws-sdk-s3 = "1.69"
chrono = { version = "0.4", features = ["serde"] }
clickhouse = "0.13"
futures-util = "0.3"
ordered-float = "4.6"
parquet = { version = "53", features = ["arrow"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
